--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,39 @@ ion-searchbar {
   width: 20px;
   max-height: 100%;
 }
+
+.app-footer--container {
+  width: 100%;
+  text-align: center;
+  padding: 0.5rem;
+  background-color: #e4e4e7;
+}
+
+.search-bar {
+  background-color: #fafafa;
+  padding: 0.5rem 0.5rem 0.5rem 1.5rem;
+  border: none;
+  border-start-start-radius: 1rem;
+  border-end-start-radius: 1rem;
+  height: 2rem;
+  font-family: "Roboto", sans-serif;
+  width: 60%;
+}
+
+.search-button {
+  padding: 0.625rem 1rem 0.625rem 1rem;
+  color: #fff;
+  background-color: #a1a1aa;
+  height: 2rem;
+  font-weight: 500;
+  outline: none !important;
+  border: none !important;
+  border-start-end-radius: 1rem;
+  border-end-end-radius: 1rem;
+}
+
+.search-button:active {
+  background: #52525b;
+  box-shadow: inset 1px 1px 1px #c1c1c1;
+  outline: none;
+}
